--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -1,3 +1,12 @@
-div[class$="-ui-comments-commentform-open"] div[class$="-ui-comments-commentform-editor"] {
-  display: none;
+.marktone {
+  .marktone-textarea {
+    display: block;
+    width: 100%;
+    height: 300px;
+    padding: 8px 12px;
+    box-sizing: border-box;
+
+    font-family: monospace;
+    font-size: 1rem;
+  }
 }
