--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -10,5 +10,8 @@
     font-size: 1rem;
 
     resize: vertical;
+
+    border: 1px solid #e3e7e8;
+    box-shadow: 4px 4px 12px #f5f5f5 inset, -4px -4px 12px #f5f5f5 inset;
   }
 }
