--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -1,75 +1,108 @@
 .marktone {
-  .marktone-textarea {
-    display: block;
-    width: 100%;
-    height: 150px;
-    padding: 8px 12px;
-    box-sizing: border-box;
+  .editor-area {
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    justify-content: space-between;
 
-    font-family: monospace;
-    font-size: 14px;
+    .autocomplete-container {
+      flex-grow: 1;
+      flex-basis: 50%;
 
-    resize: vertical;
+      display: flex;
+      flex-direction: column;
 
-    border: 1px solid #e3e7e8;
-    box-shadow: 4px 4px 12px #f5f5f5 inset, -4px -4px 12px #f5f5f5 inset;
-  }
+      textarea {
+        flex-grow: 1;
 
-  //
-  // autocomplete
-  //
-  .marktone-autocomplete-dropdown {
-    background-color: #fff;
-    border-radius: 6px;
-    padding-top: 6px;
-    padding-bottom: 6px;
-    border: 1px solid rgba(0, 0, 0, .15);
-    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, .08);
+        display: block;
+        width: 100%;
+        height: 150px;
+        padding: 8px 12px;
+        box-sizing: border-box;
 
-    overflow-x: hidden;
-    overflow-y: auto;
-    max-height: 200px;
-    z-index: 100;
+        font-family: monospace;
+        font-size: 14px;
 
-    font-size: 14px;
+        resize: vertical;
 
-    .marktone-autocomplete-list {
-      border: none;
-      box-shadow: none;
+        border: 1px solid #e3e7e8;
+        box-shadow: 4px 4px 12px #f5f5f5 inset, -4px -4px 12px #f5f5f5 inset;
+      }
+    }
 
-      .marktone-autocomplete-item {
+    .preview-wrapper {
+      flex-grow: 1;
+      flex-basis: 50%;
+
+      overflow: scroll;
+
+      .preview {
+        padding: 4px 14px;
+        font-size: 14px;
+
+        .ocean-ui-plugin-mention-user:before {
+          content: none;
+        }
+      }
+    }
+
+    //
+    // autocomplete
+    //
+    .autocomplete-dropdown {
+      background-color: #fff;
+      border-radius: 6px;
+      padding-top: 6px;
+      padding-bottom: 6px;
+      border: 1px solid rgba(0, 0, 0, .15);
+      box-shadow: 0 4px 12px 0 rgba(0, 0, 0, .08);
+
+      overflow-x: hidden;
+      overflow-y: auto;
+      max-height: 200px;
+      z-index: 100;
+
+      font-size: 14px;
+
+      .autocomplete-list {
         border: none;
+        box-shadow: none;
 
-        .mention-candidate {
-          display: flex;
-          align-items: center;
-          height: 32px;
-          padding: 0 16px;
+        .autocomplete-item {
+          border: none;
 
-          .avatar {
-            display: inline-block;
-            height: 20px;
-            width: 20px;
-            line-height: 20px;
+          .mention-candidate {
+            display: flex;
+            align-items: center;
+            height: 32px;
+            padding: 0 16px;
 
-            .avatar-image {
-              display: block;
-              border-radius: 3px;
-              height: 100%;
-              width: 100%;
-            }
-          }
+            .avatar {
+              display: inline-block;
+              height: 20px;
+              width: 20px;
+              line-height: 20px;
 
-          .name {
-            margin-left: 8px;
-            white-space: nowrap;
-
-            .code {
-              font-weight: 700;
+              .avatar-image {
+                display: block;
+                border-radius: 3px;
+                height: 100%;
+                width: 100%;
+              }
             }
 
-            .display-name {
+            .name {
               margin-left: 8px;
+              white-space: nowrap;
+
+              .code {
+                font-weight: 700;
+              }
+
+              .display-name {
+                margin-left: 8px;
+              }
             }
           }
         }
@@ -84,13 +117,11 @@
   }
 }
 
-/* TODO: Uncomment the comment after implementing the preview.
 body:not(.marktone-disabled) {
   .ocean-ui-comments-commentform-editor {
     display: none;
   }
 }
-*/
 
 // Not supported for apps.
 .container-gaia {
