--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -55,8 +55,8 @@
       border-radius: 6px;
       padding-top: 6px;
       padding-bottom: 6px;
-      border: 1px solid rgba(0, 0, 0, .15);
-      box-shadow: 0 4px 12px 0 rgba(0, 0, 0, .08);
+      border: 1px solid rgba(0, 0, 0, 0.15);
+      box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.08);
 
       overflow-x: hidden;
       overflow-y: auto;
