feat: Adjust the autocomplete loading style

--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -107,6 +107,11 @@
           }
         }
       }
+
+      .autocomplete-loader {
+        margin: 0 4px;
+        box-shadow: none;
+      }
     }
   }
 }
