--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -28,6 +28,10 @@
 
         border: 1px solid #e3e7e8;
         box-shadow: 4px 4px 12px #f5f5f5 inset, -4px -4px 12px #f5f5f5 inset;
+
+        &.dragging {
+          border: 1px solid #94d3a2;
+        }
       }
     }
 
