--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -1,4 +1,8 @@
-$default-border: 1px solid #ccc;
+$default-border-width: 1px;
+$default-border-style: solid;
+$default-border-color: #ccc;
+$default-border: $default-border-width $default-border-style
+  $default-border-color;
 
 $editor-area-border-radius: 4px;
 
@@ -6,48 +10,45 @@ $editor-area-border-radius: 4px;
   .editor-area {
     border: $default-border;
     border-radius: $editor-area-border-radius;
-    margin: 16px 16px 0;
+    margin: 16px;
 
     display: flex;
     flex-direction: row;
     align-items: stretch;
     justify-content: space-between;
 
-    .autocomplete-container {
+    .textarea-wrapper {
       flex-grow: 1;
       flex-basis: 50%;
 
-      display: flex;
-      flex-direction: column;
+      .autocomplete-container {
+        textarea {
+          display: block;
+          width: 100%;
+          height: 150px;
+          padding: 8px 12px;
+          box-sizing: border-box;
 
-      textarea {
-        flex-grow: 1;
+          font-family: monospace;
+          font-size: 14px;
 
-        display: block;
-        width: 100%;
-        height: 150px;
-        padding: 8px 12px;
-        box-sizing: border-box;
+          resize: vertical;
 
-        font-family: monospace;
-        font-size: 14px;
+          border: none;
+          border-top-left-radius: $editor-area-border-radius;
+          border-bottom-left-radius: $editor-area-border-radius;
 
-        resize: vertical;
+          background-color: #fafafa;
+          box-shadow: 4px 4px 12px #eee inset, -4px -4px 12px #eee inset;
 
-        border: none;
-        border-top-left-radius: $editor-area-border-radius;
-        border-bottom-left-radius: $editor-area-border-radius;
+          &:focus {
+            background-color: #fff;
+            box-shadow: 4px 4px 12px #f5f5f5 inset, -4px -4px 12px #f5f5f5 inset;
+          }
 
-        background-color: #fafafa;
-        box-shadow: 4px 4px 12px #eee inset, -4px -4px 12px #eee inset;
-
-        &:focus {
-          background-color: #fff;
-          box-shadow: 4px 4px 12px #f5f5f5 inset, -4px -4px 12px #f5f5f5 inset;
-        }
-
-        &.dragging {
-          border: 1px solid #94d3a2;
+          &.dragging {
+            border: 1px solid #94d3a2;
+          }
         }
       }
     }
@@ -72,73 +73,172 @@ $editor-area-border-radius: 4px;
         }
       }
     }
+  }
 
-    //
-    // autocomplete
-    //
-    .autocomplete-dropdown {
-      background-color: #fff;
-      border-radius: 6px;
-      padding-top: 6px;
-      padding-bottom: 6px;
-      border: 1px solid rgba(0, 0, 0, 0.15);
-      box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.08);
+  &:not(.tab-mode) {
+    .tabs {
+      display: none;
+    }
+  }
 
-      overflow-x: hidden;
-      overflow-y: auto;
-      max-height: 200px;
-      z-index: 100;
+  &.tab-mode {
+    .tabs {
+      display: flex;
 
-      font-size: 14px;
+      font-size: 13px;
+      background-color: #f5f5f5;
+      border-width: $default-border-width $default-border-width 0;
+      border-style: $default-border-style;
+      border-color: $default-border-color;
+      border-radius: 4px 4px 0 0;
+      margin: 16px 16px -1px 16px;
+      padding: 4px 16px 0;
 
-      .autocomplete-list {
-        border: none;
-        box-shadow: none;
+      .tab {
+        flex-grow: 1;
 
-        .autocomplete-item {
-          border: none;
+        font-weight: 400;
+        text-align: center;
 
-          .mention-candidate {
-            display: flex;
-            align-items: center;
-            height: 32px;
-            padding: 0 16px;
+        border-width: $default-border-width;
+        border-style: $default-border-style;
+        border-color: transparent;
+        border-radius: 8px 8px 0 0;
 
-            .avatar {
-              display: inline-block;
-              height: 20px;
-              width: 20px;
-              line-height: 20px;
+        padding: 8px 16px 6px;
+        margin: 0 4px;
+      }
+    }
 
-              .avatar-image {
-                display: block;
-                border-radius: 3px;
-                height: 100%;
-                width: 100%;
-              }
-            }
+    .editor-area {
+      margin-top: 0;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
 
-            .name {
-              margin-left: 8px;
-              white-space: nowrap;
+      .textarea-wrapper {
+        border: $default-border;
+        border-radius: 4px;
+        margin: 16px;
 
-              .code {
-                font-weight: 700;
-              }
-
-              .display-name {
-                margin-left: 8px;
-              }
-            }
-          }
+        textarea {
+          border-radius: 4px;
         }
       }
 
-      .autocomplete-loader {
-        margin: 0 4px;
-        box-shadow: none;
+      .preview-wrapper {
+        border: none;
+        margin: 16px;
       }
     }
+
+    &:not(.preview-active) {
+      .tabs {
+        .edit-tab {
+          border-color: $default-border-color $default-border-color #fff;
+          background-color: #fff;
+        }
+
+        .preview-tab:hover {
+          cursor: pointer;
+          background-color: #fafafa;
+          border-bottom: $default-border;
+        }
+      }
+
+      .editor-area {
+        .preview-wrapper {
+          display: none;
+        }
+      }
+    }
+
+    &.preview-active {
+      .tabs {
+        .preview-tab {
+          border-color: $default-border-color $default-border-color #fff;
+          background-color: #fff;
+        }
+
+        .edit-tab:hover {
+          cursor: pointer;
+          background-color: #fafafa;
+          border-bottom: $default-border;
+        }
+      }
+
+      .editor-area {
+        .textarea-wrapper {
+          display: none;
+        }
+      }
+    }
+  }
+}
+
+//
+// autocomplete
+//
+.autocomplete-dropdown {
+  background-color: #fff;
+  border-radius: 6px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.08);
+
+  overflow-x: hidden;
+  overflow-y: auto;
+  max-height: 200px;
+  z-index: 100;
+
+  font-size: 14px;
+
+  .autocomplete-list {
+    border: none;
+    box-shadow: none;
+
+    .autocomplete-item {
+      border: none;
+
+      .mention-candidate {
+        display: flex;
+        align-items: center;
+        height: 32px;
+        padding: 0 16px;
+
+        .avatar {
+          display: inline-block;
+          height: 20px;
+          width: 20px;
+          line-height: 20px;
+
+          .avatar-image {
+            display: block;
+            border-radius: 3px;
+            height: 100%;
+            width: 100%;
+          }
+        }
+
+        .name {
+          margin-left: 8px;
+          white-space: nowrap;
+
+          .code {
+            font-weight: 700;
+          }
+
+          .display-name {
+            margin-left: 8px;
+          }
+        }
+      }
+    }
+  }
+
+  .autocomplete-loader {
+    margin: 0 4px;
+    box-shadow: none;
   }
 }
 
@@ -161,7 +261,7 @@ body:not(.marktone-disabled) {
       box-shadow: none;
 
       padding: 0;
-      margin-top: 12px;
+      margin-top: 0;
       min-width: 120px;
       height: 36px;
 
