--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -50,11 +50,15 @@ $editor-area-border-radius: 4px;
           border-bottom-left-radius: $editor-area-border-radius;
 
           background-color: #fafafa;
-          box-shadow: 4px 4px 12px #eee inset, -4px -4px 12px #eee inset;
+          box-shadow:
+            4px 4px 12px #eee inset,
+            -4px -4px 12px #eee inset;
 
           &:focus {
             background-color: #fff;
-            box-shadow: 4px 4px 12px #f5f5f5 inset, -4px -4px 12px #f5f5f5 inset;
+            box-shadow:
+              4px 4px 12px #f5f5f5 inset,
+              -4px -4px 12px #f5f5f5 inset;
           }
 
           &.dragging {
